; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_rack.c_rack_stop_all_timers.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_rack.c_rack_stop_all_timers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpcb = type { i64 }
%struct.tcp_rack = type { i32 }

@TT_PERSIST = common dso_local global i32 0, align 4
@TT_REXMT = common dso_local global i32 0, align 4
@TT_KEEP = common dso_local global i32 0, align 4
@TT_DELACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcpcb*)* @rack_stop_all_timers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rack_stop_all_timers(%struct.tcpcb* %0) #0 {
  %2 = alloca %struct.tcpcb*, align 8
  %3 = alloca %struct.tcp_rack*, align 8
  store %struct.tcpcb* %0, %struct.tcpcb** %2, align 8
  %4 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %5 = load i32, i32* @TT_PERSIST, align 4
  %6 = call i64 @tcp_timer_active(%struct.tcpcb* %4, i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %10 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.tcp_rack*
  store %struct.tcp_rack* %12, %struct.tcp_rack** %3, align 8
  %13 = load %struct.tcp_rack*, %struct.tcp_rack** %3, align 8
  %14 = getelementptr inbounds %struct.tcp_rack, %struct.tcp_rack* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %8, %1
  %16 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %17 = load i32, i32* @TT_PERSIST, align 4
  %18 = call i32 @tcp_timer_suspend(%struct.tcpcb* %16, i32 %17)
  %19 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %20 = load i32, i32* @TT_REXMT, align 4
  %21 = call i32 @tcp_timer_suspend(%struct.tcpcb* %19, i32 %20)
  %22 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %23 = load i32, i32* @TT_KEEP, align 4
  %24 = call i32 @tcp_timer_suspend(%struct.tcpcb* %22, i32 %23)
  %25 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %26 = load i32, i32* @TT_DELACK, align 4
  %27 = call i32 @tcp_timer_suspend(%struct.tcpcb* %25, i32 %26)
  ret void
}

declare dso_local i64 @tcp_timer_active(%struct.tcpcb*, i32) #1

declare dso_local i32 @tcp_timer_suspend(%struct.tcpcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
